<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/title"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:textSize="18sp"
                    android:text="@string/enter_item"/>
                <EditText
                    android:id="@+id/itemName"
                    android:layout_below="@+id/title"
                    android:layout_width="match_parent"
                    android:hint="@string/hint_item"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/itemQuantity"
                    android:inputType="number"
                    android:layout_below="@+id/itemName"
                    android:layout_width="match_parent"
                    android:hint="@string/hint_qty"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/itemColor"
                    android:layout_below="@+id/itemQuantity"
                    android:layout_width="match_parent"
                    android:hint="@string/hint_color"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/itemSize"
                    android:inputType="number"
                    android:layout_below="@+id/itemColor"
                    android:layout_width="match_parent"
                    android:hint="@string/hint_size"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/saveButton"
                    android:layout_marginEnd="5dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/save_button"
                    android:background="@color/colorAccent"
                    android:textColor="@android:color/white"
                    android:layout_below="@+id/itemSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>