<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:padding="23dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/text_alert"
                android:text="@string/sure_text"
                android:layout_centerHorizontal="true"
                android:padding="6dp"
                android:textSize="17sp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/confirm_no_btn"
                android:text="@string/no_txt"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/confirm_yes_btn"
                android:text="@string/yes_txt"
                android:layout_alignParentRight="true"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>